# try_parquet

./: CMakeLists.txt  README.md  analyze_olap_data.py  analyze_olap_data_duckdb.py  build_cpp.sh  discover_schema.py  generate_olap_data.py  requirements.txt  setup-native.sh
.github/: copilot-instructions.md
include/: arrow_analyzer.h  duckdb_analyzer.h
src/: arrow_analyzer.cpp  duckdb_analyzer.cpp  main_arrow.cpp  main_duckdb.cpp
